[package]
name = "fallible"
version = "0.1.0"
edition = "2024"

[dependencies]
fallible-core = { path = "../fallible-core" }
fallible-macro = { path = "../fallible-macro" }
fxhash = "0.2.1"

[features]
default = ["fallible-sim"]
fallible-sim = []
std = ["fallible-core/std"]
anyhow = ["fallible-core/anyhow"]
eyre = ["fallible-core/eyre"]