[package]
name = "fallible"
version = "0.1.0"
edition = "2024"
description = "Failure injection library for testing error handling in Rust"
license = "MIT"
repository = "https://github.com/s0uthview/fallible"
readme = "../README.md"
keywords = ["testing", "fault-injection", "chaos", "reliability", "errors"]
categories = ["development-tools::testing", "development-tools::debugging"]

[dependencies]
fallible-core = { version = "0.1.0", path = "../fallible-core" }
fallible-macro = { version = "0.1.0", path = "../fallible-macro" }
fxhash = "0.2.1"

[features]
default = ["fallible-sim", "std"]
fallible-sim = []
std = ["fallible-core/std"]
anyhow = ["fallible-core/anyhow"]
eyre = ["fallible-core/eyre"]