[package]
name = "fallibles-core"
version = "0.1.0"
edition = "2024"
description = "Failure injection library for testing error handling in Rust"
license = "MIT"
repository = "https://github.com/s0uthview/fallible"

[dependencies]
fxhash = "0.2.1"

[features]
default = []
std = []
anyhow = ["dep:anyhow", "std"]
eyre = ["dep:eyre", "std"]

[dependencies.anyhow]
version = "1"
optional = true

[dependencies.eyre]
version = "0.6"
optional = true
