[package]
name = "fallibles"
version = "0.1.0"
edition = "2024"
description = "Failure injection library for testing error handling in Rust"
license = "MIT"
repository = "https://github.com/s0uthview/fallible"
readme = "../README.md"
keywords = ["testing", "fault-injection", "chaos", "reliability", "errors"]
categories = ["development-tools::testing", "development-tools::debugging"]

[dependencies]
fallibles-core = { version = "0.1.0", path = "../fallibles-core" }
fallibles-macro = { version = "0.1.0", path = "../fallibles-macro" }
fxhash = "0.2.1"

[features]
default = ["fallibles-sim", "std"]
fallibles-sim = []
std = ["fallibles-core/std"]
anyhow = ["fallibles-core/anyhow"]
